app-prep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prep
  labels:
    app: app-prep
spec:
  template:
    metadata:
      labels:
        app: app-prep
    spec:
      containers:
        - name: app-prep
          image: 210450948776.dkr.ecr.sa-east-1.amazonaws.com/restaurante-preparation:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  selector:
    matchLabels:
      app: app-prep
  replicas: 2
