app-prep-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-prep
spec:
  type: ClusterIP
  selector:
    app: app-prep
  ports:
    - port: 80
      targetPort: 80
