mongo-prep-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-prep
spec:
  type: ClusterIP
  selector:
    app: mongo-prep
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo-prep
